// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`has clientEvents 1`] = `
[
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2023-03-21T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2023-01-19T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2023-01-09T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-12-29T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`has clientEventsWithSupervisionEvents 1`] = `
[
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2022-12-24T00:00:00.000Z,
    "metricId": "absconsion_date",
  },
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2022-11-13T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2022-09-13T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2022-09-03T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-08-23T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2021-01-08T00:00:00.000Z,
    "metricId": "assigned_to_officer_Harris",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2021-01-08T00:00:00.000Z,
    "metricId": "COMMUNITY_CONFINEMENT_start_date",
  },
]
`;

exports[`has clientEventsWithSupervisionEvents even if supervisionDetails is undefined 1`] = `
[
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2023-03-21T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2023-01-19T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2023-01-09T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-12-29T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`has clientInfo 1`] = `
{
  "birthdate": 1971-03-15T00:00:00.000Z,
  "clientId": "985771",
  "displayName": "Kevin Baker",
  "fullName": {
    "givenNames": "Kevin",
    "surname": "Baker",
  },
  "gender": "MALE",
  "pseudonymizedClientId": "hashed-985771",
  "raceOrEthnicity": "BLACK",
}
`;

exports[`has supervisionDetails if metric event date matches outcomeDate 1`] = `
{
  "officerAssignmentDate": 2021-01-08T00:00:00.000Z,
  "supervisionStartDate": 2021-01-08T00:00:00.000Z,
  "supervisionType": "COMMUNITY_CONFINEMENT",
}
`;

exports[`with client data already hydrated > has clientEvents 1`] = `
[
  {
    "attributes": {
      "code": "149",
      "description": "NOT ASSOCIATE WITH ANYONE YOU KNOW TO HAVE A FELONY RECORD",
    },
    "eventDate": 2023-03-21T00:00:00.000Z,
    "metricId": "violations",
  },
  {
    "attributes": {
      "code": null,
      "description": null,
    },
    "eventDate": 2023-01-19T00:00:00.000Z,
    "metricId": "treatment_completion",
  },
  {
    "attributes": {
      "code": null,
      "description": "PAROLE REINSTATED",
    },
    "eventDate": 2023-01-09T00:00:00.000Z,
    "metricId": "violation_responses",
  },
  {
    "attributes": {
      "code": "148",
      "description": "COMPLY WITH ALCOHOL AND DRUG TESTING ORDERED BY FIELD AGENT",
    },
    "eventDate": 2022-12-29T00:00:00.000Z,
    "metricId": "violations",
  },
]
`;

exports[`with client data already hydrated > has clientInfo 1`] = `
{
  "birthdate": 1971-03-15T00:00:00.000Z,
  "clientId": "985771",
  "displayName": "Kevin Baker",
  "fullName": {
    "givenNames": "Kevin",
    "surname": "Baker",
  },
  "gender": "MALE",
  "pseudonymizedClientId": "hashed-985771",
  "raceOrEthnicity": "BLACK",
}
`;
